# qa_guru_diplom_ui

./: README.md  pyproject.toml  requirements.txt
demoqa_tests/model/controls/: __init__.py  checkbox.py  date_picker.py  dropdown.py  radio_button.py
demoqa_tests/model/data/: user.py
demoqa_tests/model/pages/: practice_form.py
demoqa_tests/utils/: config.py  file_path.py
notifications/: config.json
tests/: conftest.py  practice_form_test.py
